--- a/DRRadiov3/res/layout/programserie_elem0_top.xml
+++ b/DRRadiov3/res/layout/programserie_elem0_top.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/hvid"
+        android:background="@drawable/knap_graa_bg"
         >
 
     <ImageView
@@ -58,7 +58,7 @@
             android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearance"
             android:text="For lige om lidt bliver fremdriftsreformen implementeret."
             />
 
@@ -74,6 +74,7 @@
             android:id="@+id/alle_udsendelser"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ALLE UDSENDELSER (12)"
