--- a/DRRadiov3/res/layout/udsendelse_elem2_tid_titel_kunstner.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem2_tid_titel_kunstner.xml
@@ -24,34 +24,43 @@
             android:layout_height="3dp"/>
 
 
-    <TextView
-            android:id="@+id/startid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="17.04"
-            android:textColor="@color/grå70"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            tools:ignore="HardcodedText"
-            />
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <TextView
-                android:id="@+id/titel_og_kunstner"
+
+        <LinearLayout
                 android:layout_width="0px"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/startid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="17.04"
+                    android:textColor="@color/grå70"
+                    android:textAppearance="?android:attr/textAppearance"
+                    tools:ignore="HardcodedText"
+                    />
+
+
+            <TextView
+                    android:id="@+id/titel_og_kunstner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="P3 Sporten  |  Polarkreis 18"
                 android:maxLines="2"
                 tools:ignore="HardcodedText"/>
+        </LinearLayout>
 
         <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
                 android:id="@+id/højttalerikon"
                 android:src="@drawable/dri_lyd_blaa"/>
 
