--- a/DRRadiov3/res/menu/udsendelse.xml
+++ b/DRRadiov3/res/menu/udsendelse.xml
@@ -4,18 +4,18 @@
             android:id="@+id/hør"
             android:title="Hør udsendelse"
             android:orderInCategory="1"
-            android:icon="@drawable/dri_lyd2_hvid"
+            android:icon="@drawable/dri_lyd2_graa40"
             app:showAsAction="always"/>
     <item
             android:id="@+id/hent"
             android:title="Hent udsendelse"
             android:orderInCategory="1"
             android:icon="@drawable/dri_hent_graa40"
-            app:showAsAction="ifRoom"/>
+            app:showAsAction="always"/>
     <item
             android:id="@+id/del"
             android:title="Del"
             android:orderInCategory="1"
             android:icon="@android:drawable/ic_menu_share"
-            app:showAsAction="ifRoom"/>
+            app:showAsAction="always"/>
 </menu>
