--- a/DRRadiov3/res/layout/afspiller_lille_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_lille_frag.xml
@@ -6,18 +6,19 @@
         android:layout_height="wrap_content"
         android:background="@color/grå70"
         android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:orientation="horizontal">
 
 
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <ImageView
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:scaleType="center"
             android:id="@+id/start_stop_pauseknap"
-            android:src="@drawable/dri_radio_pause_hvid"
+            android:src="@drawable/afspiller_spil"
             />
 
     <!--
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
