--- a/DRRadiov3/res/layout/afspiller_lille_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_lille_frag.xml
@@ -40,16 +40,6 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/kanal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="P3 Live"
-                tools:ignore="HardcodedText"
-                android:textStyle="bold"
-                android:textColor="@color/blå"/>
-
-        <TextView
                 android:id="@+id/titel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,7 +48,18 @@
                 android:textStyle="bold"
                 android:maxLines="2"
                 tools:ignore="HardcodedText"
+                android:background="@color/grå80"
                 android:textColor="@color/hvid"/>
+
+        <TextView
+                android:id="@+id/metainformation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="P3 Live"
+                tools:ignore="HardcodedText"
+                android:background="@color/grå60"
+                android:textColor="@color/blå"/>
 
     </LinearLayout>
 
