--- a/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
+++ b/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
@@ -21,7 +21,7 @@
             android:id="@+id/titel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Senere"
+            android:text="Tidligere"
             android:layout_gravity="center"
             tools:ignore="HardcodedText"/>
 
