--- a/DRRadiov3/res/values-small/dimens.xml
+++ b/DRRadiov3/res/values-small/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="kanalvisning_aktuelUdsendelse_topmargen">-10dp</dimen>
+    <dimen name="hørknap_højde">36dp</dimen>
 </resources>
