--- a/DRRadiov3/res/values/dimens.xml
+++ b/DRRadiov3/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="kanalvalg_tekststr">20sp</dimen>
 
     <dimen name="kanalvisning_aktuelUdsendelse_topmargen">0dp</dimen>
+    <dimen name="hørknap_højde">44dp</dimen>
+    <dimen name="hørknap_udvidet_klikområde">12dp</dimen>
 </resources>
