--- a/DRRadiov3/res/layout/programserie_elem1_udsendelse.xml
+++ b/DRRadiov3/res/layout/programserie_elem1_udsendelse.xml
@@ -19,14 +19,10 @@
             android:layout_height="3dp"/>
 
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
         <TextView
-                android:id="@+id/titel_og_dato"
-                android:layout_width="wrap_content"
+                android:id="@+id/titel"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pressen på P3 - 17. jan. 2014"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -35,13 +31,10 @@
                 tools:ignore="HardcodedText"
                 />
 
-    </LinearLayout>
-
     <TextView
-            android:id="@+id/kanal_og_varighed"
+            android:id="@+id/varighed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="P3, 55 MIN"
             tools:ignore="HardcodedText"/>
 
