Favoritter Designtilretninger   *   Player info:  "P3 LIVE" (Loaded stream - hvid GibsonSemiBold), næste linje: “Stopped" (Status - grå GibsonRegular)   *   Call to action knap størrelse er forskellig på forside og udssendelsesside OK. Spil-knap - brede trykområdet ud til 44dp Visning er 30dp på små skærme 44dp på store skærme
FORSIDE:
Fjernet højttalerikonerne (så p.t. på oversigtsniveau mangler der en indikator på om en faktisk udsendelse kan høres).


UDSENDELSESSIDE:
  *   Link pil ikon ved “Alle udsendelser” mangler
Jeg har lavet en pil, men det strider mod platformens designretningslinjer og vi bør tænke i hvad vi så gør. Jeg har prøvet at lave teksten 'link'-agtig.


PROGRAMSERIESIDE:
  *   Hjerte ikon skal erstattes af det rigtige - off/stroke, on/solid turkis - Har puttet hjerteikon på, men mangler en hul udgave.
  *   Listeitems uden kanalmetainfo - Varighed vises stadig (hvis den kendes)

--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -53,6 +53,12 @@
             android:defaultValue="false"
             android:summary="Ser også grimt ud. Kræver app-genstart"/>
 
+    <CheckBoxPreference
+            android:key="eksperiment_hørIkonerIKanaloversigt"
+            android:title="Vis 'hør' i kanaloversigt"
+            android:defaultValue="false"
+            android:summary="Vis om en udsendelse kan høres i kanaloversigten"/>
+
 
     <CheckBoxPreference
             android:key="manuelStreamvalg"
