--- a/DRRadiov3/res/drawable/knap_hvid_bg.xml
+++ b/DRRadiov3/res/drawable/knap_hvid_bg.xml
@@ -3,8 +3,16 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
+            <solid android:color="@color/grå20"/>
+            <stroke android:width="1dp" android:color="@color/grå40"/>
+        </shape>
+    </item>
+
+
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
             <solid android:color="@color/grå10"/>
-            <stroke android:width="1dp" android:color="@color/grå20"/>
+            <stroke android:width="3dp" android:color="@color/grå20"/>
         </shape>
     </item>
 
