--- a/DRRadiov3/res/xml/afspiller_widgetinfo.xml
+++ b/DRRadiov3/res/xml/afspiller_widgetinfo.xml
@@ -4,10 +4,10 @@
                     android:minHeight="40dp"
 
                     android:updatePeriodMillis="86400000"
-                    android:initialLayout="@layout/afspillerwidget"
+                    android:initialLayout="@layout/afspillerwidget_binh"
                     android:resizeMode="horizontal|vertical"
                     android:widgetCategory="keyguard|home_screen"
-                    android:initialKeyguardLayout="@layout/afspillerwidget"
+                    android:initialKeyguardLayout="@layout/afspillerwidget_binh"
         >
     <!--
                     android:minHeight="72dip"
