--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -29,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:padding="20dp"
+            android:textSize="18sp"
             android:text="Indlæser, vent venligst"/>
 </FrameLayout>
 
