--- a/DRRadiov3/res/layout/kanal_p4_frag.xml
+++ b/DRRadiov3/res/layout/kanal_p4_frag.xml
@@ -21,8 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Intet indhold"/>
+            android:padding="20dp"
+            android:textSize="18sp"
+            android:text="Indlæser, vent venligst"/>
 
     <!--
             android:background="@drawable/p4_vi_gaetter_paa_at_du_vaelger_dialogbg"
