--- a/DRRadiov3/res/layout/kontakt_info_om_frag.xml
+++ b/DRRadiov3/res/layout/kontakt_info_om_frag.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@color/grå70"
               android:gravity="center_horizontal"
               android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
@@ -10,9 +9,8 @@
             android:id="@+id/titel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="18sp"
             android:padding="16dp"
-            android:textColor="@color/hvid"
             android:textStyle="bold"
             android:text="Om DR Radio">
     </TextView>
