--- a/DRRadiov3/res/layout/udsendelse_elem3_alle_udsendelser.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem3_alle_udsendelser.xml
@@ -6,15 +6,13 @@
         android:id="@+id/titel"
         tools:ignore="HardcodedText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/alle_udsendelser_understreget"
-        android:textColor="@color/blå_mørk"
+        android:layout_height="64dp"
+        android:text="Alle udsendelser ..."
         android:textStyle="bold"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:drawableRight="@drawable/dri_pil_hoejre_blaa"
         android:gravity="center_vertical"
         />
 
