--- a/DRRadiov3/res/layout/udsendelse_elem0_top.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_top.xml
@@ -33,22 +33,12 @@
             android:orientation="horizontal">
 
         <TextView
-                android:id="@+id/titel2"
+                android:id="@+id/titel_og_tid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="P3 Sporten"
+                android:text="P3 radioavisen bla bla bla  - 20. jan 2014"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold"/>
-
-        <TextView
-                android:id="@+id/dato"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text=" - 20. jan 2014"
-                android:layout_weight="1"/>
     </LinearLayout>
 
 
