Mere fed skrift (<b> erstattet med Gibson fed) Navneændringer

--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -43,7 +43,7 @@
     <!-- The drawer is given a fixed width in dp and extends the full height of
          the container. -->
     <fragment
-            android:id="@+id/navigation_frag"
+            android:id="@+id/venstremenu_frag"
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
