--- a/DRRadiov3/res/layout/soeg_efter_program_frag.xml
+++ b/DRRadiov3/res/layout/soeg_efter_program_frag.xml
@@ -14,19 +14,21 @@
             android:orientation="horizontal" >
 
             <EditText
-                android:layout_alignParentLeft="true"
+                    android:id="@+id/soegFelt"
+                    android:layout_alignParentLeft="true"
                 android:layout_marginRight="60dp"
                 android:hint="Søg efter program"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
             <ImageView
-                android:id="@+id/startStopKnap"
-                android:layout_width="60dp"
+                    android:id="@+id/soegKnap"
+                    android:layout_width="60dp"
                 android:layout_height="44dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:scaleType="center"
+                android:background="@drawable/knap_hvid_bg"
                 android:src="@drawable/dri_soeg_blaa" />
         </RelativeLayout>
 
