--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -31,6 +31,6 @@
             android:layout_gravity="center"
             android:padding="20dp"
             android:textSize="18sp"
-            android:text="Indlæser, vent venligst"/>
+            android:text="Indlæser, vent venligst..."/>
 </FrameLayout>
 
