--- a/DRRadiov3/res/layout/kontakt_info_om_frag.xml
+++ b/DRRadiov3/res/layout/kontakt_info_om_frag.xml
@@ -24,13 +24,25 @@
             />
 
 
-    <ImageButton
+    <Button
             android:id="@+id/kontakt"
-            android:contentDescription="Skriv meddelelse til DR"
+            android:text="Skriv meddelelse til DR"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/feedback_knap"/>
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/knap_blaa_bg"/>
+
+    <TextView
+            android:id="@+id/version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/grå40"
+            android:textSize="8sp"
+            android:text="Version 232323">
+    </TextView>
+
 
 </LinearLayout>
 
