Udsendelse: Påbegyndt "faneblade" med playliste og info

--- a/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
+++ b/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:descendantFocusability="blocksDescendants"
-        android:background="@drawable/knap_graa_bg"
+        android:background="@drawable/knap_graa10_bg"
         android:padding="16dp"
         android:orientation="horizontal">
 
