--- a/DRRadiov3/res/layout/udsendelse_elem4_info.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem4_info.xml
@@ -2,17 +2,14 @@
 <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@drawable/knap_graa_bg"
         android:id="@+id/titel"
         tools:ignore="HardcodedText"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:text="Alle udsendelser ..."
-        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:text="- musik, nyheder, journalistik bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla "
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:gravity="center_vertical"
         />
 
