Udsendelse: Påbegyndt "faneblade" med playliste og info

--- a/DRRadiov3/res/layout/udsendelse_elem1_playliste_kapitler_info_overskrift.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem1_playliste_kapitler_info_overskrift.xml
@@ -11,7 +11,7 @@
             android:layout_width="0px"
             android:layout_height="32dp"
             android:layout_weight="1"
-            android:layout_margin="1dp"
+            android:layout_marginRight="1dp"
             android:layout_marginLeft="16dp"
             android:text="PLAYLISTE"
             android:textColor="@color/hvid"
@@ -22,7 +22,7 @@
             android:layout_width="0px"
             android:layout_height="32dp"
             android:layout_weight="1"
-            android:layout_margin="1dp"
+            android:layout_marginLeft="1dp"
             android:layout_marginRight="16dp"
             android:text="INFO"
             android:textColor="@color/hvid"
