Udsendelser med faner

--- a/DRRadiov3/res/layout/udsendelse_elem5_vis_hele_playlisten.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem5_vis_hele_playlisten.xml
@@ -2,7 +2,7 @@
 <Button
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/titel"
+        android:id="@+id/vis_hele_playlisten"
         tools:ignore="HardcodedText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
