--- a/DRRadiov3/res/layout/udsendelse_elem3_tid_titel_kunstner.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem3_tid_titel_kunstner.xml
@@ -24,11 +24,16 @@
             android:layout_height="3dp"/>
 
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/startid"
@@ -40,7 +45,6 @@
                     tools:ignore="HardcodedText"
                     />
 
-
             <TextView
                     android:id="@+id/titel_og_kunstner"
                     android:layout_width="wrap_content"
@@ -50,13 +54,14 @@
                     android:maxLines="2"
                     tools:ignore="HardcodedText"/>
         </LinearLayout>
-    <!--
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/hør"
-                    android:src="@drawable/dri_lyd_blaa"/>
-        </LinearLayout>
-    -->
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/hør"
+                android:src="@drawable/dri_lyd_blaa"/>
+    </LinearLayout>
 
+
+    <!--
+-->
 </LinearLayout>
