--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -35,53 +35,8 @@
             android:summary="Hakker afspilningen når skærmen er slukket så prøv at krydse af her (bruger mere batteri). Nødvendigt på XPeria Play."/>
 
     <CheckBoxPreference
-            android:key="udvikling" android:title="Udvikler"
+            android:key="udviklerEkstra" android:title="Udvikler"
             android:defaultValue="false" android:summaryOff=""
-            android:summaryOn="Til udviklere og fejlfinding. Appen skal genstartes før det træder i kraft"/>
-
-
-    <CheckBoxPreference
-            android:key="brugGibsonIVenstremenu"
-            android:title="Brug Gibson i venstre-menu"
-            android:defaultValue="true"
-            android:summary="Gibson ser grimt ud i venstremenu på visse enheder. Kræver app-genstart"/>
-
-
-    <CheckBoxPreference
-            android:key="kunSortLigeBagTekst"
-            android:title="Kun sort bag tekst i titler"
-            android:defaultValue="false"
-            android:summary="Ser også grimt ud. Kræver app-genstart"/>
-
-    <CheckBoxPreference
-            android:key="eksperiment_hørIkonerIKanaloversigt"
-            android:title="Vis 'hør' i kanaloversigt"
-            android:defaultValue="false"
-            android:summary="Vis om en udsendelse kan høres i kanaloversigten"/>
-
-
-    <CheckBoxPreference
-            android:key="manuelStreamvalg"
-            android:title="Manuelt streamvalg"
-            android:defaultValue="false"
-            android:summary="Vælg manuelt mellem de tilgængelige streams, indtil API'et kan give korrekte streamtyper"/>
-
-    <!--
-
-     />
-
-        <CheckBoxPreference android:key="udvikler" android:title="Udvikler"
-            android:defaultValue="false" android:summaryOff=""
-        android:summaryOn="Til udviklere og fejlfinding. Appen skal genstartes før det træder i kraft" />
-        -->
-
-    <!-- 	<EditTextPreference android:key="udviklerKontakt" android:title="Kontakt"
-        android:summary="Skriv din e-postadresse hvis du vil kunne kontaktes i forbindelse
-        med udvikling" android:defaultValue="" /> -->
-
-    <!-- <CheckBoxPreference android:key="lukAfspillerServiceVedAfslutning"
-        android:title="Når programmet lukkes" android:defaultValue="false" android:summaryOff="Fortsæt
-        afspilning af radio" android:summaryOn="Stop afspilning (fungerer ikke med
-        levende ikoner/widget)" /> -->
+            android:summaryOn="Vis ekstra muligheder til udviklere og fejlfinding."/>
 
 </PreferenceScreen>
