--- a/DRRadiov3/res/layout/afspiller_notifikation_lille.xml
+++ b/DRRadiov3/res/layout/afspiller_notifikation_lille.xml
@@ -1,85 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:id="@+id/yderstelayout"
-                android:orientation="vertical">
-
+    android:id="@+id/yderstelayout"
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
+    android:orientation="vertical" >
 
     <RelativeLayout
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:visibility="visible" >
 
         <TextView
-                android:id="@+id/udsendelseTitel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Ramasjang: Formiddag"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/hvid"
-                android:textStyle="bold"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <LinearLayout
-                android:id="@+id/progressBarRammer"
+            android:id="@+id/titel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Ramasjang: Formiddag"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/hvid"
+            android:textStyle="bold" />
+        
+        <ImageView
+                android:id="@+id/luk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:visibility="visible">
+                android:scaleType="center"
+                android:src="@drawable/dri_luk_hvid"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+
+       
+
+        <ImageView
+            android:layout_alignParentRight="true"
+            android:id="@+id/startStopKnap"
+            android:layout_width="60dp"
+            android:layout_height="44dp"
+            android:layout_gravity="right"
+           
+            android:scaleType="center"
+            android:src="@drawable/afspiller_spil" />
+        
+         <LinearLayout
+            android:id="@+id/progressBarRammer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             android:layout_toLeftOf="@id/startStopKnap"
+            android:visibility="visible" >
 
             <ProgressBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="44dp"/>
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp" />
         </LinearLayout>
 
         <ImageView
-                android:id="@+id/startStopKnap"
-                android:layout_width="60dp"
-                android:layout_height="44dp"
-                android:layout_gravity="right"
-                android:layout_toLeftOf="@id/progressBarRammer"
-                android:scaleType="center"
-                android:src="@drawable/afspiller_spil"/>
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_alignParentLeft="true"
+            android:scaleType="center"
+            android:src="@drawable/dr_logo"
+            android:visibility="visible" />
 
         <TextView
-                android:id="@+id/kanalnavn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="0dip"
-                android:layout_toLeftOf="@id/startStopKnap"
-                android:text="DR P3"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#505050"
-                android:visibility="invisible">
+            android:id="@+id/metainformation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="0dip"
+            android:layout_toRightOf="@id/logo"
+            android:text="P 3"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/hvid"
+            android:visibility="visible" >
         </TextView>
 
         <ImageView
-                android:id="@+id/logo"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_alignParentLeft="true"
-                android:scaleType="center"
-                android:src="@drawable/dr_logo"
-                android:visibility="visible"/>
-
-        <ImageView
-                android:id="@+id/billede"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_toRightOf="@id/logo"
-                android:scaleType="center"
-                android:src="@drawable/kanalappendix_kh4"
-                android:visibility="visible"/>
+            android:id="@+id/billede"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_toRightOf="@id/metainformation"
+            android:scaleType="center"
+            android:src="@drawable/kanalappendix_kh4"
+            android:visibility="gone" />
     </RelativeLayout>
-
 
 </RelativeLayout>
