--- a/DRRadiov3/res/layout/venstremenu_elem_adskiller_tynd.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_adskiller_tynd.xml
@@ -3,13 +3,20 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
+    <!--
+        android:layerType="software" er nødvendig, ellers tegnes der en vandret
+         streg i stedet for stiplet linje på Android 3+
+        -->
 
     <View
-            android:background="@color/grå10"
+            android:background="@drawable/stiplet_linje"
+            android:layerType="software"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
+            />
+    <!--
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            />
+    -->
 </LinearLayout>
