--- a/DRRadiov3/res/xml/indstillinger_udvikling.xml
+++ b/DRRadiov3/res/xml/indstillinger_udvikling.xml
@@ -26,6 +26,18 @@
             android:summary="Vælg manuelt mellem de tilgængelige streams, indtil API'et kan give korrekte streamtyper"/>
 
 
+    <CheckBoxPreference
+            android:key="udsendelser_vandret_skift"
+            android:title="Vandret skift mellem udsendelser"
+            android:defaultValue="false"
+            android:summary="Bladr mellem udsendelser på den normale måde på Android, med vertikalt swipe"/>
+
+    <CheckBoxPreference
+            android:key="udsendelser_bladr_ikke"
+            android:title="Slå skift mellem udsendelser fra"
+            android:defaultValue="false"
+            android:summary="Slå bladring mellem udsendelser helt fra"/>
+
     <!-- 	<EditTextPreference android:key="udviklerKontakt" android:title="Kontakt"
         android:summary="Skriv din e-postadresse hvis du vil kunne kontaktes i forbindelse
         med udvikling" android:defaultValue="" /> -->
